Alterações para o Responsivo
ainda em andamento.

--- a/index.html
+++ b/index.html
@@ -1,140 +1,129 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>LP CARROS</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="preloader">
-        <div class="spinner"> <img src="img/gif-roda.gif" alt=""></div>
-        <h1 class="msg-carregando">
-            Carregando....
-        </h1>
+      <div class="spinner"><img src="img/gif-roda.gif" alt="" /></div>
+      <h1 class="msg-carregando">Carregando....</h1>
     </div>
     <header class="menu">
-        <img src="img/logo.png" alt="logo">
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="carros.html">Carros</a></li>
-                <li><a href="contato.html">Fale Conosco</a></li>
-            </ul>
-        </nav>
-
+      <img src="img/logo.png" alt="logo" />
+      <nav>
+        <ul class="menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="carros.html">Carros</a></li>
+          <li><a href="contato.html">Fale Conosco</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section class="container">
-        <div class="list">
-
-            <div class="item active" data-bg-color="linear-gradient(to right, #696969, #A9A9A9)">
-                <div class="car-img">
-                    <img src="./img/1.png" alt="imagem carro">
-                </div>
-                <div class="content">
-                    <p class="car-information">
-                        TOP DE LINHA
-                    </p>
-                    <h2>
-                        911 Turbo
-                    </h2>
-                    <p class="description">
-                        O Porsche 911 é um esportivo lendário com motor traseiro e design clássico. Combinando luxo,
-                        desempenho e tecnologia, ele se destaca pela dirigibilidade precisa e potência impressionante.
-                        Modelos como o Turbo e o GT3 oferecem aerodinâmica refinada, tornando-o um dos carros mais
-                        desejados.
-                    </p>
-                    <button class="information">
-                        Saiba Mais
-                    </button>
-                </div>
-            </div>
-
-            <div class="item" data-bg-color="linear-gradient(to right, #FF0000, #FF6347)">
-                <div class="car-img">
-                    <img src="./img/2.png" alt="imagem carro">
-                </div>
-                <div class="content">
-                    <p class="car-information">
-                        Conversível, 0KM
-                    </p>
-                    <h2>
-                        Ferrari
-                    </h2>
-                    <p class="description">
-                        A Ferrari é sinônimo de desempenho e luxo, com carros potentes e design sofisticado. Modelos
-                        como o 488 GTB oferecem velocidade impressionante e dirigibilidade precisa, tornando-a uma das
-                        marcas mais desejadas no mundo dos supercarros.
-                    </p>
-                    <button class="information">
-                        Saiba Mais
-                    </button>
-                </div>
-            </div>
-
-            <div class="item" data-bg-color="linear-gradient(to right, #FFB300, #F57C00">
-                <div class="car-img">
-                    <img src="./img/3.png" alt="imagem carro">
-                </div>
-                <div class="content">
-                    <p class="car-information">
-                        IPVA PAGO, 2015
-                    </p>
-                    <h2>
-                        Lamborghini
-                    </h2>
-                    <p class="description">
-                        A Lamborghini é famosa por seus supercarros extravagantes e de alto desempenho. Com design
-                        agressivo e motores potentes, modelos como o Aventador oferecem velocidade e adrenalina,
-                        combinados com luxo e exclusividade.
-                    </p>
-                    <button class="information">
-                        Saiba Mais
-                    </button>
-                </div>
-            </div>
-
-
+      <div class="list">
+        <div
+          class="item active"
+          data-bg-color="linear-gradient(to right, #696969, #A9A9A9)"
+        >
+          <div class="car-img">
+            <img src="./img/1.png" alt="imagem carro" />
+          </div>
+          <div class="content">
+            <p class="car-information">TOP DE LINHA</p>
+            <h2>911 Turbo</h2>
+            <p class="description">
+              O Porsche 911 é um esportivo lendário com motor traseiro e design
+              clássico. Combinando luxo, desempenho e tecnologia, ele se destaca
+              pela dirigibilidade precisa e potência impressionante. Modelos
+              como o Turbo e o GT3 oferecem aerodinâmica refinada, tornando-o um
+              dos carros mais desejados.
+            </p>
+            <button class="information">Saiba Mais</button>
+          </div>
         </div>
 
-
-        <div class="arrows">
-            <button id="prev"> <img src="./img/arrow.svg" alt="seta-direita"></button>
-            <button id="next"> <img src="./img/arrow.svg" alt="seta-esquerda"></button>
+        <div
+          class="item"
+          data-bg-color="linear-gradient(to right, #FF0000, #FF6347)"
+        >
+          <div class="car-img">
+            <img src="./img/2.png" alt="imagem carro" />
+          </div>
+          <div class="content">
+            <p class="car-information">Conversível, 0KM</p>
+            <h2>Ferrari</h2>
+            <p class="description">
+              A Ferrari é sinônimo de desempenho e luxo, com carros potentes e
+              design sofisticado. Modelos como o 488 GTB oferecem velocidade
+              impressionante e dirigibilidade precisa, tornando-a uma das marcas
+              mais desejadas no mundo dos supercarros.
+            </p>
+            <button class="information">Saiba Mais</button>
+          </div>
         </div>
 
-        <div class="indicators">
-            <div class="number">01</div>
-            <ul>
-                <li class="active"></li>
-                <li></li>
-                <li></li>
-            </ul>
+        <div
+          class="item"
+          data-bg-color="linear-gradient(to right, #FFB300, #F57C00"
+        >
+          <div class="car-img">
+            <img src="./img/3.png" alt="imagem carro" />
+          </div>
+          <div class="content">
+            <p class="car-information">IPVA PAGO, 2015</p>
+            <h2>Lamborghini</h2>
+            <p class="description">
+              A Lamborghini é famosa por seus supercarros extravagantes e de
+              alto desempenho. Com design agressivo e motores potentes, modelos
+              como o Aventador oferecem velocidade e adrenalina, combinados com
+              luxo e exclusividade.
+            </p>
+            <button class="information">Saiba Mais</button>
+          </div>
         </div>
+      </div>
+
+      <div class="arrows">
+        <button id="prev">
+          <img src="./img/arrow.svg" alt="seta-direita" />
+        </button>
+        <button id="next">
+          <img src="./img/arrow.svg" alt="seta-esquerda" />
+        </button>
+      </div>
+
+      <div class="indicators">
+        <div class="number">01</div>
+        <ul>
+          <li class="active"></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
     </section>
 
     <section>
-        <div>
-            <h2>
-                teste
-            </h2>
-        </div>
+      <div>
+        <h2>teste</h2>
+      </div>
     </section>
 
     <script src="./scripts.js"></script>
-</body>
-
+  </body>
 </html>
